--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.10.8",
-		"@emotion/styled": "^11.10.8",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
 		"@hookform/resolvers": "^3.1.0",
 		"@mui/icons-material": "^5.11.16",
-		"@mui/material": "^5.12.3",
-		"@mui/styled-engine-sc": "^5.12.0",
+		"@mui/material": "^5.14.17",
+		"@mui/styled-engine-sc": "^5.14.12",
+		"@mui/x-data-grid": "^6.18.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -23,7 +24,7 @@
 		"react-router-dom": "^6.11.1",
 		"react-scripts": "5.0.1",
 		"react-validation": "^3.0.7",
-		"styled-components": "^5.3.10",
+		"styled-components": "^5.3.11",
 		"web-vitals": "^2.1.4",
 		"yup": "^1.1.1"
 	},
